--- a/BarcodeScanning/src/main/res/values/strings.xml
+++ b/BarcodeScanning/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CameraXBarcodeScanning</string>
     <string name="low_light_tip">弱光环境，请开启照明</string>
-    <string name="qr_bar_code">二维码 / 条形码</string>
+    <string name="qr_bar_code">识别二维码 / 条形码</string>
     <string name="file_scan_code_nofile">未检测到要识别的图片\n轻触屏幕继续扫描</string>
     <string name="file_scan_code_nodata">未识别到二维码/条形码\n轻触屏幕继续扫描</string>
 
